cabal-version: 2.0
name: phash
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2019 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
synopsis: Find duplicate images
description:
    Find similar images using perceptual hashes
category: Application, CommandLine, Images
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/vmchale/phash

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        PerceptualHash
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

executable phash
    main-is: Main.hs
    pkgconfig-depends: pHash -any
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base >=4.9 && <5,
        phash -any,
        containers -any,
        filepath -any,
        dir-traverse -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
